fixed button z-index

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 }
 
 .content {
-	position: fixed;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -81,7 +80,6 @@ body {
 	align-items: center;
 	justify-content: center;
 	gap: 1em;
-	position: fixed;
 }
 
 .content a {
@@ -92,10 +90,8 @@ body {
 	padding: 1em 2em;
 	font-weight: 450;
 	background: var(--clr-accent);
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	margin-top: 1.5rem;
+	z-index: 1;
 }
 
 .content a:hover {
